parser/src/lexer/snapshots/parser__lexer__lexer__tests__numeric-binary-2.snap
---
source: parser/src/lexer/lexer.rs
description: 0b10
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b10",
        ),
        start: 0,
        end: 4,
    },
]
