parser/src/lexer/snapshots/parser__lexer__lexer__tests__numeric-hexadecimal-16.snap
---
source: parser/src/lexer/lexer.rs
description: "0xA"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xA",
        ),
        start: 0,
        end: 3,
    },
]
